@@ -20,7 +20,9 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <site.deploy.url>http://flatpack.sf.net</site.deploy.url>
+        <!--
+            <site.deploy.url>http://flatpack.sf.net</site.deploy.url>
+        -->
         <github.global.server>github</github.global.server>
         <github.global.oauth2Token>${env.GITHUB_OAUTH_TOKEN}</github.global.oauth2Token>
     </properties>
@@ -32,7 +34,7 @@
 
     <inceptionYear>2006</inceptionYear>
     <!--<url>http://flatpack.sourceforge.net/</url>
--->
+    -->
     <organization>
         <name>Appendium - Portfolio Financing Platform</name>
         <url>http://www.appendium.com/</url>
@@ -171,25 +173,58 @@
                     </execution>
                 </executions>
             </plugin>
-<plugin>
-				<groupId>com.github.github</groupId>
-				<artifactId>downloads-maven-plugin</artifactId>
-				<version>0.6</version>
-				<configuration>
-					<description>Official ${project.name} build of the ${project.version} release</description>
-					<override>true</override>
-					<includeAttached>true</includeAttached>
-					<server>github</server>
-				</configuration>
-				<executions>
-					<execution>
-						<goals>
-							<goal>upload</goal>
-						</goals>
-						<phase>install</phase>
-					</execution>
-				</executions>
-			</plugin>
+            <plugin>
+                <groupId>org.owasp</groupId>
+                <artifactId>dependency-check-maven</artifactId>
+                <version>1.3.3</version>
+                <configuration>
+                    <cveValidForHours>12</cveValidForHours>
+                    <failBuildOnCVSS>4</failBuildOnCVSS>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <!--
+                <plugin>
+                <groupId>com.github.github</groupId>
+                <artifactId>downloads-maven-plugin</artifactId>
+                <version>0.6</version>
+                <configuration>
+                <description>Official ${project.name} build of the ${project.version} release</description>
+                <override>true</override>
+                <includeAttached>true</includeAttached>
+                <server>github</server>
+                </configuration>
+                <executions>
+                <execution>
+                <goals>
+                <goal>upload</goal>
+                </goals>
+                <phase>install</phase>
+                </execution>
+                </executions>
+                </plugin>
+                <plugin>
+                <groupId>com.github.github</groupId>
+                <artifactId>site-maven-plugin</artifactId>
+                <version>0.12</version>
+                <configuration>
+                <message>Building site for ${project.version}</message>
+                </configuration>
+                <executions>
+                <execution>
+                <goals>
+                <goal>site</goal>
+                </goals>
+                <phase>site</phase>
+                </execution>
+                </executions>
+                </plugin> -->
             <plugin>
                 <groupId>com.github.github</groupId>
                 <artifactId>site-maven-plugin</artifactId>
@@ -205,6 +240,146 @@
                         <phase>site</phase>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-site-plugin</artifactId>
+                <version>3.4</version>
+                <configuration>
+                    <reportPlugins>
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-surefire-report-plugin</artifactId>
+                            <version>2.17</version>
+                            <configuration>
+                            </configuration>
+                        </plugin>
+                        <plugin>
+                            <groupId>org.codehaus.mojo</groupId>
+                            <artifactId>versions-maven-plugin</artifactId>
+                            <version>2.1</version>
+                        </plugin>
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-javadoc-plugin</artifactId>
+                            <version>2.9.1</version>
+                            <configuration>
+                                <aggregate>true</aggregate>
+                                <breakiterator>true</breakiterator>
+                                <detectLinks>true</detectLinks>
+                                <detectOfflineLinks>true</detectOfflineLinks>
+                                <links>
+                                    <link>http://download.oracle.com/javase/7/docs/api/</link>
+                                    <link>http://download.oracle.com/javaee/7/api/</link>
+                                    <link>http://docs.spring.io/spring/docs/current/javadoc-api/</link>
+                                    <link>http://docs.spring.io/spring-data/data-jpa/docs/current/api/</link>
+                                    <link>http://slf4j.org/api/</link>
+                                    <link>http://jakarta.apache.org/commons/logging/apidocs/</link>
+                                    <link>http://junit.sourceforge.net/javadoc/</link>
+                                </links>
+                                <linksource>true</linksource>
+                                <show>private</show>
+                            </configuration>
+                        </plugin>
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-project-info-reports-plugin</artifactId>
+                            <version>2.7</version>
+                            <configuration>
+                                <aggregate>true</aggregate>
+                                <dependencyDetailsEnabled>true</dependencyDetailsEnabled>
+                                <dependencyLocationsEnabled>true</dependencyLocationsEnabled>
+                            </configuration>
+                        </plugin>
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-jxr-plugin</artifactId>
+                            <version>2.3</version>
+                            <configuration>
+                                <aggregate>true</aggregate>
+                            </configuration>
+                        </plugin>
+                        <plugin>
+                            <groupId>org.codehaus.mojo</groupId>
+                            <artifactId>cobertura-maven-plugin</artifactId>
+                            <version>2.6</version>
+                            <configuration>
+                                <formats>
+                                    <format>html</format>
+                                </formats>
+                                <instrumentation>
+                                    <ignores>
+                                        <ignore>org.lanyonm.playground.config.*</ignore>
+                                    </ignores>
+                                    <excludes>
+                                        <exclude>org/lanyonm/playground/config/*.class</exclude>
+                                    </excludes>
+                                </instrumentation>
+                            </configuration>
+                        </plugin>
+                        <plugin>
+                            <groupId>org.owasp</groupId>
+                            <artifactId>dependency-check-maven</artifactId>
+                            <version>1.3.3</version>
+                            <configuration>
+                                <name>Dependency Check</name>
+                            </configuration>
+                            <reportSets>
+                                <reportSet>
+                                    <reports>
+                                        <report>aggregate</report>
+                                    </reports>
+                                </reportSet>
+                            </reportSets>
+                        </plugin>
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-pmd-plugin</artifactId>
+                            <version>2.7.1</version>
+                            <configuration>
+                                <sourceEncoding>${project.build.sourceEncoding}</sourceEncoding>
+                                <minimumTokens>100</minimumTokens>
+                                <targetJdk>${java.version}</targetJdk>
+                            </configuration>
+                        </plugin>
+                        <plugin>
+                            <groupId>org.codehaus.mojo</groupId>
+                            <artifactId>findbugs-maven-plugin</artifactId>
+                            <version>2.5.3</version>
+                            <configuration>
+                                <effort>Max</effort>
+                                <threshold>Low</threshold>
+                                <argLine>-Xmx256m</argLine>
+                                <argLine>-XX:MaxPermSize=256m</argLine>
+                            </configuration>
+                        </plugin>
+                        <plugin>
+                            <groupId>org.codehaus.mojo</groupId>
+                            <artifactId>taglist-maven-plugin</artifactId>
+                            <version>2.4</version>
+                            <configuration>
+                                <tagListOptions>
+                                    <tagClasses>
+                                        <tagClass>
+                                            <displayName>Todo Work</displayName>
+                                            <tags>
+                                                <tag>
+                                                    <matchString>todo</matchString>
+                                                    <matchType>ignoreCase</matchType>
+                                                </tag>
+                                                <tag>
+                                                    <matchString>FIXME</matchString>
+                                                    <matchType>exact</matchType>
+                                                </tag>
+                                            </tags>
+                                        </tagClass>
+                                    </tagClasses>
+                                </tagListOptions>
+                            </configuration>
+                        </plugin>
+                    </reportPlugins>
+                    <locales>en</locales>
+                </configuration>
             </plugin>
         </plugins>
     </build>
